[gd_scene load_steps=2 format=3 uid="uid://bru15uyya0o6r"]

[ext_resource type="Script" path="res://scenes/register_screen/register_screen.gd" id="1_0iu26"]

[node name="RegisterScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0iu26")

[node name="Background" type="Panel" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 509.0
offset_top = 64.0
offset_right = 771.0
offset_bottom = 96.0
grow_horizontal = 2
text = "Registro de Usuarios"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Register" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 544.0
offset_top = 304.0
offset_right = 736.0
offset_bottom = 368.0
grow_horizontal = 2
disabled = true
text = "Registrarse"

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 544.0
offset_top = 384.0
offset_right = 736.0
offset_bottom = 448.0
grow_horizontal = 2
text = "Volver"

[node name="Incorrect" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(930, 0)
layout_mode = 2
offset_left = 188.0
offset_top = 259.0
offset_right = 1118.0
offset_bottom = 285.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Datos incorrectos"
vertical_alignment = 1

[node name="Input_Container" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 188.0
offset_top = 167.0
offset_right = 1118.0
offset_bottom = 244.0
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 3

[node name="Name" type="LineEdit" parent="Input_Container"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
placeholder_text = "Nombre..."
editable = false

[node name="Surname" type="LineEdit" parent="Input_Container"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
placeholder_text = "Apellido..."
editable = false

[node name="DNI" type="LineEdit" parent="Input_Container"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
placeholder_text = "DNI..."
editable = false

[node name="Username" type="LineEdit" parent="Input_Container"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
tooltip_text = "El usuario es la primer letra del nombre seguido del apellido"
placeholder_text = "Usuario..."
editable = false

[node name="Password" type="LineEdit" parent="Input_Container"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
tooltip_text = "La contraseña son los últimos 4 digitos del DNI"
placeholder_text = "Contraseña..."
editable = false
secret = true

[node name="Role" type="OptionButton" parent="Input_Container"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
disabled = true
item_count = 4
selected = 0
popup/item_0/text = "Dueño"
popup/item_0/id = 0
popup/item_1/text = "Gerente"
popup/item_1/id = 1
popup/item_2/text = "Empleado"
popup/item_2/id = 2
popup/item_3/text = "Contador"
popup/item_3/id = 3

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Register" to="." method="_on_register_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="text_changed" from="Input_Container/Name" to="." method="_on_line_edit_text_changed"]
[connection signal="text_changed" from="Input_Container/Surname" to="." method="_on_line_edit_text_changed"]
[connection signal="text_changed" from="Input_Container/DNI" to="." method="_on_line_edit_text_changed"]
[connection signal="text_changed" from="Input_Container/Username" to="." method="_on_line_edit_text_changed"]
[connection signal="text_changed" from="Input_Container/Password" to="." method="_on_line_edit_text_changed"]
